homeserver/piwigo/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: piwigo-deployment
  namespace: media
  labels:
    app: piwigo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: piwigo
  template:
    metadata:
      labels:
        app: piwigo
    spec:
      containers:
        - name: piwigo
          image: lscr.io/linuxserver/piwigo:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          volumeMounts:
            - name: piwigo-config-pv
              mountPath: "/config"
            - name: piwigo-gallery-pv
              mountPath: "/gallery"
      volumes:
        - name: piwigo-config-pv
          persistentVolumeClaim:
            claimName: piwigo-config-pvc
        - name: piwigo-gallery-pv
          persistentVolumeClaim:
            claimName: piwigo-gallery-pvc
