homeserver/piwigo/service.yml
apiVersion: v1
kind: Service
metadata:
  name: piwigo
  namespace: piwigo
spec:
  type: LoadBalancer
  selector:
    app: piwigo
  ports:
    - name: main-port
      protocol: TCP
      port: 9095
      targetPort: 80
